--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -17,6 +17,11 @@
 
   .chatter {
     padding-bottom: 30px;
+    font-size: 16px;
+
+    @media @mobile {
+      text-align: center;
+    }
   }
 
   .sidebar {
@@ -129,7 +134,7 @@
     border-radius: 4px;
 
     @media @mobile {
-      width: 150px;
+      width: 100px;
       height: 30px;
       margin-bottom: 10px;
     }
